fixed bug for smaller screen overflow

--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,7 @@ body {
 
 .shapes-background {
 	position: absolute;
+	overflow: hidden;
 	width: 100%;
 	height: 100%;
 	top: 0;
